--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -8,6 +8,7 @@
 {%- style -%}
   .footer {
     margin-top: {{ section.settings.margin_top | times: 0.75 | round: 0 }}px;
+    margin-bottom: 60px;
   }
 
   .section-{{ section.id }}-padding {
