Add primary and secondary colors from brand assets

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -220,6 +220,11 @@
         --variant-pills-shadow-horizontal-offset: {{ settings.variant_pills_shadow_horizontal_offset }}px;
         --variant-pills-shadow-vertical-offset: {{ settings.variant_pills_shadow_vertical_offset }}px;
         --variant-pills-shadow-blur-radius: {{ settings.variant_pills_shadow_blur }}px;
+
+        --color-primary: {{  shop.brand.colors.primary[0].background }};
+        --color-primary-foreground: {{  shop.brand.colors.primary[0].foreground }};
+        --color-secondary: {{  shop.brand.colors.secondary[0].background }};
+        --color-secondary-foreground: {{  shop.brand.colors.secondary[0].foreground }};
       }
 
       *,
