--- a/assets/base.css
+++ b/assets/base.css
@@ -273,7 +273,7 @@ h5,
 }
 
 .hxl {
-  font-size: calc(var(--font-heading-scale) * 5rem);
+  font-size: calc(var(--font-heading-scale) * 4rem);
   line-height: calc(1 + 0.3 / max(1, var(--font-heading-scale)));
 }
 
@@ -1123,6 +1123,7 @@ summary::-webkit-details-marker {
   top: 0;
   left: 0;
   height: 100%;
+  /* height: auto; */
   width: 100%;
 }
 
