--- a/assets/section-image-banner.css
+++ b/assets/section-image-banner.css
@@ -4,6 +4,13 @@
   flex-direction: column;
   z-index: auto;
   isolation: isolate;
+  height: calc(100svh - 101px);
+}
+
+.banner img {
+  height: 100%;
+  object-fit: cover;
+  object-position: top;
 }
 
 .banner__box {
@@ -83,6 +90,7 @@
 @media screen and (min-width: 750px) {
   .banner {
     flex-direction: row;
+    height: auto;
   }
 
   .banner--small:not(.banner--adapt) {
@@ -276,6 +284,12 @@
   z-index: 2;
 }
 
+@media screen and (max-width: 749px) {
+  .banner__content.banner__content--middle-left {
+    align-items: end;
+  }
+}
+
 @media screen and (min-width: 750px) {
   .banner__content {
     padding: 5rem;
@@ -339,7 +353,7 @@
 }
 
 .banner__box {
-  padding: 4rem 1.5rem;
+  padding: 5rem 3.5rem;
   position: relative;
   height: fit-content;
   align-items: center;
@@ -435,6 +449,13 @@
 
 .banner__heading {
   margin-bottom: 0;
+  font-weight: 400;
+  text-shadow: 0 4px 4px rgb(0 0 0 / 25%);
+}
+
+.banner__heading strong {
+  font-weight: 700;
+  color: var(--color-primary);
 }
 
 .banner__box .banner__heading + * {
