--- a/assets/collapsible-content.css
+++ b/assets/collapsible-content.css
@@ -61,11 +61,13 @@
 .collapsible-content__heading {
   margin-bottom: 2rem;
   margin-top: 0;
+  font-size: 2rem;
 }
 
 @media screen and (min-width: 750px) {
   .collapsible-content__heading {
     margin-bottom: 3rem;
+    font-size: 3rem;
   }
 }
 
