--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -225,6 +225,12 @@
         --color-primary-foreground: {{  shop.brand.colors.primary[0].foreground }};
         --color-secondary: {{  shop.brand.colors.secondary[0].background }};
         --color-secondary-foreground: {{  shop.brand.colors.secondary[0].foreground }};
+
+        --color-accent-1: #858CF3;
+        --color-accent-2: #FFE201;
+        --color-accent-3: #4D55C6;
+        --color-accent-4: #E0D1FF;
+        --color-accent-5: #EAF5B9;
       }
 
       *,
