--- a/assets/newsletter-section.css
+++ b/assets/newsletter-section.css
@@ -1,12 +1,33 @@
 .newsletter__wrapper {
   padding-right: calc(4rem / var(--font-body-scale));
   padding-left: calc(4rem / var(--font-body-scale));
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.newsletter__box {
+  flex: 1;
+  width: 100%;
+}
+
+.newsletter__box--left {
+  text-align: left
+};
+
+.newsletter__box--left .newsletter__subheading {
+  margin-left: 0;
 }
 
 @media screen and (min-width: 750px) {
   .newsletter__wrapper {
     padding-right: 9rem;
     padding-left: 9rem;
+    flex-direction: row;
+    gap: 32px;
   }
 }
 
@@ -25,12 +46,6 @@
 
 .newsletter__subheading {
   max-width: 70rem;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.newsletter__wrapper .newsletter-form__field-wrapper {
-  max-width: 36rem;
 }
 
 .newsletter-form__field-wrapper .newsletter-form__message {
